Mon Oct 13 12:08:51 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* Headers/gnustep/gui/config.h: Added to repository.
	* Makefile.postamble: Don't delete config.h file since it's no longer
	automatically generated.

Wed Oct  8 15:38:22 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* Heavy display and window flushing optimizations have been
	implemented.
	* Source/NSView.m (-setDisplayInRect:): Now is implemented to work
	optimized.
	(-displayRect:): Likewise.
	(-setNeedsDisplay:): Likewise.
	(-setNeedsDisplayInRect:): Likewise.
	(-_addSubviewForNeedingDisplay:): New method.
	(-_recursivelyResetNeedsDisplayInAllViews): Likewise.
	(-_displayNeededViews): Likewise.
	(-_collectFlushRectangles): Likewise.
	(-_setNeedsDisplay): Likewise.
	(-_setNeedsFlush): Likewise.
	(-_needsFlush): Likewise.
	(+_flushWindows): Likewise.
	* Headers/gnustep/gui/NSWindow.h: Important optimization for window
	flushing has been implemented.
	* Source/NSWindow.m: Likewise.
	* Headers/gnustep/gui/PSMatrix.h (boundingRectFor:): New method.
	(isRotated): New method.
	(rectInMatrixSpace:): New method.
	* Source/NSApplication.m (-nextEventMatchingMask:untilDate:inMode:
	dequeue:): Call the NSWindow class to flush the windows, then flush the
	communication channels.
	(-_flushCommunicationChannels): New method.
	* Source/NSWindow.m (-disableFlushWindow): New method.
	* Source/PSMatrix.m (-boundingRectFor:result:): New method.
	(-rectInMatrixSpace:): Likewise.

	* NSSlider has been implemented.
	* Headers/gnustep/gui/NSSlider.h: New implementation.
	* Source/NSSlider.m: Likewise.
	* Headers/gnustep/gui/NSSliderCell.h: Likewise.
	* Source/NSSliderCell.m: Likewise.

	* Source/NSButton.m: Use -setNeedsDisplay: instead of display.
	* Source/NSCell.m: Likewise.
	* Source/NSControl.m: Likewise.
	* Source/NSScroller.m: Likewise.
	* Source/NSMatrix.m: Likewise. Removed all lock focuses because display
	occurs at a later time. It is still possible to improve the